tests/extends/extends.exp
Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Cannot extend `C` [1] with `B` because string [1] is not inheritable.

   test.js:8:1
   8| class B extends C {}
      ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:8:17
   8| class B extends C {}
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:13:30

`B` [1] is incompatible with `A` [2].

   test.js:13:30
   13|   invariant(value instanceof B);
                                    ^

References:
   test.js:8:7
    8| class B extends C {}
             ^ [1]
   test.js:5:18
    5| type AOrString = A | string;
                        ^ [2]



Found 2 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
